src/objects/frSupporter_Identity__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Funraise_Supporter_ID__c</fullName>
        <externalId>true</externalId>
        <label>Funraise Supporter ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Supporter__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Person Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Funraise Supporter Identities</relationshipLabel>
        <relationshipName>Funraise_Supporter_Identities</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Funraise Supporter Identity</label>
    <nameField>
        <displayFormat>FRI-{0000000}</displayFormat>
        <label>Funraise Supporter Identity</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funraise Supporter Identities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>